# Reiay-Rust

./: README.md
reiay_rust/: .gitignore  Cargo.toml
reiay_rust/src/: config.rs  db.rs  main.rs
reiay_rust/src/i18n/: mod.rs
reiay_rust/src/i18n/translations/: en.ftl  ru.ftl
reiay_rust/src/middleware/: locale_middleware.rs  mod.rs
reiay_rust/src/models/: message.rs  role.rs  room.rs  user.rs
reiay_rust/src/routers/: api.rs  messages.rs  mod.rs  roles.rs  rooms.rs  users.rs
