[package]
name = "reiay_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fluent = "0.16.0"  # Для i18n
fluent-bundle = "0.15.3"
fluent-syntax = "0.16"
